--- a/main.css
+++ b/main.css
@@ -36,8 +36,9 @@ nav ul li a {
     border: 2px solid #333;
     display: flex;
     flex-direction: column;
-    margin: 20px;
+    margin: 20px auto;
     padding: 20px;
     place-content: center;
     width: 50%;
+    max-width: 800px;
 }
