--- a/index.css
+++ b/index.css
@@ -32,7 +32,7 @@ nav ul li a {
 }
 
 .content {
-    background-color: white;
+    background-color: #F1F7ED;
     border: 2px solid #333;
     display: flex;
     flex-direction: column;
