--- a/index.css
+++ b/index.css
@@ -16,6 +16,7 @@ header h1 {
     margin: 0;
 }
 
+
 nav ul {
     list-style-type: none;
     padding: 0;
@@ -39,8 +40,9 @@ nav ul li a {
     margin: 20px auto;
     padding: 20px;
     place-content: center;
-    width: 50%;
-    max-width: 800px;
+    height: 700px;
+    width: 960px;
+    max-width: 1060px;
 }
 
 #choices {
